# covctl

./: HACKATHON_REPORT.md  README.md  file
backend/: Cargo.toml
backend/src/: main.rs  routes.rs
backend/src/routes/: api_requests.rs  data.rs
covalent_class_a/: Cargo.toml  LICENSE.txt  README.md
covalent_class_a/src/: lib.rs  resources.rs
covctl/: Cargo.toml  README.md
covctl/src/: main.rs
deprecated/axum_backend/: Cargo.toml
deprecated/axum_backend/src/: main.rs
deprecated/axum_backend/src/routes/: data.rs
deprecated/klaytn_backend/: Cargo.toml
deprecated/klaytn_backend/src/: routes.rs
deprecated/klaytn_frontend/: Cargo.toml
deprecated/klaytn_frontend/src/: components.rs
deprecated/manual_test_library/: Cargo.toml
deprecated/manual_test_library/src/: main.rs
deprecated/yew_frontend/: Cargo.toml
frontend/: Cargo.toml
frontend/src/: components.rs  main.rs
functional_test_lib/: Cargo.toml
functional_test_lib/src/: main.rs
