[package]
name = "covalent_class_a"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.137", features = ["derive"] }
serde_with = { version = "1.13.0", features = ["json"] }
http = "0.2.7"
reqwest = { version = "0.11.10", features = ["json", "blocking"] }
log = "0.4.17"
env_logger = "0.9.0"
