[package]
name = "covctl"
version = "0.1.0"
edition = "2021"
description = "CLI tool to easily interact with the covalent API https://www.covalenthq.com/docs/api"
# TODO: update
homepage = "https://github.com/mark-ruddy/covalent_class_a"
repository = "https://github.com/mark-ruddy/covalent_class_a"
license-file = "LICENSE.txt"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
covalent_class_a = { path = "../covalent_class_a" }
clap = { version = "3.1.8", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
log = "0.4.17"
env_logger = "0.9.0"
serde_json = "1.0.81"
