[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web3 = "0.18.0"
yew = "0.19"
yew-stdweb = "0.18.0"
log = "0.4.17"
web-sys = "0.3.57"
wasm-bindgen = "0.2.80"
wasm-logger = "0.2.0"
