[package]
name = "tester"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
covalent_class_a = { path = "../covalent_class_a" }
tokio = { version = "1.0", features = ["full"] }
log = "0.4.17"
env_logger = "0.9.0"
