[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# custom library in parent directory
# in future this library could be published on crates.io
# and pulled from there instead of a directory in this git repo
covalent_class_a = "0.1.0"
axum = "0.5.5"
tokio = { version = "1.0", features = ["full"] }
log = "0.4.17"
env_logger = "0.9.0"
serde = { version = "1.0.137", features = ["derive"] }
serde_with = { version = "1.13.0", features = ["json"] }
http = "0.2.7"
mongodb = "2.2.1"
clap = { version = "3.1.18", features = ["derive"] }
reqwest = "0.11.10"
