[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web3 = { version = "0.18.0", default_features = false, features = ["wasm"] }
covalent_class_a = "0.1.0"
yew = "0.19"
serde_json = "1.0.81"
yew-stdweb = "0.18.0"
log = "0.4.17"
web-sys = "0.3.57"
wasm-bindgen = "0.2.80"
wasm-logger = "0.2.0"
lazy_static = "1.4.0"
wasm-bindgen-futures = "0.4.30"
